[package]
name = "orderbook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
native-tls = "0.2.11"
serde = { version = "1.0.183", features = ["derive"] }
serde_json = "1.0.104"
tungstenite = { version = "0.20.0", features = ["native-tls"] }
url = "2.4.0"
